welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:4: error: not found: value nbBiscuit
while(nbBiscuit < 4)
      ^RunFour:9: error: not found: value nbBiscuit
		nbBiscuit = nbBiscuit + 1
                ^